welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:7: error: not found: value faire
def faireMotif { faire(V); 
                 ^PictureMono2:10: error: Unit does not take parameters
	faireMotif();
                  ^